--- a/style.css
+++ b/style.css
@@ -23,9 +23,7 @@ body {
     
 }
 
-p {
 
-}
 
 .forme p {
   color: #dbdbdb;
@@ -68,14 +66,16 @@ p {
 }
 
 .content-sites h2 {
-    margin: 30px;
-    color: #ffffff;
+    margin-left: 50px;
+    margin-top: 50px;
+    color: #fced49;
     font-family: verdana;
     font-size: 18px;
 }
 
 .content-sites p {
-    margin: 50px;
+    margin-left: 50px;
+    margin-right: 100px;
     color: #ffffff;
     font-family: verdana;
     font-size: 15px;
@@ -86,4 +86,24 @@ p {
     font-family: verdana;
     font-size: 25px;
     text-align: center;
+}
+
+.content-sites img {
+    margin: 50px;
+    position: relative;
+}
+
+.back-home a {
+    font-family: linksFont;
+    font-size: 20px;
+    color: #fced49;
+
+}
+
+.back-home a:hover {
+    color: #fc9349;
+}
+
+.back-home a {
+    margin: 15px;
 }
